# libecpint-python

./: .gitmodules  CMakeLists.txt  README.md  setup.py
pyecpint/: __init__.py  parseecp.py
src/: Files.cmake  api.cpp  docstrings.cpp  docstrings.hpp  ecp.cpp  gshell.cpp  helpers.hpp  main.cpp
